# ClusterChainDynamics

./: .gitignore  README.md  pyproject.toml
examples/: cluster_in_square_potential.py  galpy_potential_pulsed_feedback.py  square_potential_constant_feedback.py
src/ClusterChainDynamics/: __init__.py
src/ClusterChainDynamics/core/: __init__.py  compact_object.py  self_propelling_mc.py  star_cluster.py
src/ClusterChainDynamics/forces/feedback/: __init__.py  constant.py  constant_position.py  linear_time.py  pulsed_time.py
src/ClusterChainDynamics/forces/gravity/: __init__.py  galpy_wrapper.py  squared.py
src/ClusterChainDynamics/plotting/: __init__.py  coord_vs_vel_2D.py
src/ClusterChainDynamics/simulations/: __init__.py  calculate_path.py  observe.py  propagate.py
tests/: test_init.py  test_self_propelling_mc.py  test_star_cluster.py
