[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ClusterChainDynamics"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A package for cluster chain dynamics analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>2.0",
    "scipy>=1.7",
    "pytest>=7.0",
    "matplotlib>=3.10.7",
    "galpy>=1.11.1",
    "ipython>=8.37.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shutsch/ClusterChainDynamics"
"Bug Tracker" = "https://github.com/shutsch/ClusterChainDynamics/issues"
